Change raise(3) to be thread-aware - send the signal to current LWP. From <ad> via PR/40341.